--- a/style.css
+++ b/style.css
@@ -110,13 +110,17 @@ html {
 
 .snake-button {
     width: 99vw;
-    height: 60px;
+    height: 70px;
     font-family: 'Quicksand', sans-serif;
     font-size: 3vh;
     background-color: rgba(255, 255, 255, 0.781);
     border: 1px solid black;
     border-radius: 70px 70px 70px 70px;
     transition-duration: 500ms;
+}
+
+#random-color{
+    display: none;
 }
 
 #snake-pause {
