--- a/style.css
+++ b/style.css
@@ -139,19 +139,71 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 #shooter-board {
-    background-color: black;
+    background-color: rgb(211, 22, 22);
 }
 
 #shooter-player {
-    display: '';
+    display: none;
     border: 1px solid white;
     position: absolute;
-    height: calc(2vw + 25px);
-    width: calc(2vw + 25px);
-    border-radius: calc(2vw + 25px) 0px calc(2vw + 25px) calc(2vw + 25px);
+    height: calc(2vw + 30px);
+    width: calc(2vw + 30px);
+    border-radius: calc(2vw + 30px) 0px calc(2vw + 30px) calc(2vw + 30px);
 }
+
+#contained-container {
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 1000px;
+    height: auto;
+    background-color: white;
+    padding: 10px;
+    border-radius: 500px;
+}
+
+#shooter-start {
+    width: 800px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: blueviolet;
+    color: white;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 25px;
+}
+
+#shooter-bar {
+    display: flex;
+    width: max-content;
+    height: max-content;
+    position: absolute;
+    bottom: 0;
+}
+
+.shooter-button {
+    width: 99vw;
+    height: 30px;
+    font-family: 'Quicksand', sans-serif;
+    font-size: auto;
+    background-color: rgba(255, 255, 255, 0.781);
+    border: 1px solid black;
+    border-radius: 70px 70px 70px 70px;
+    transition-duration: 500ms;
+}
+
+#shooter-settings {
+    display: none;
+}
+#shooter-settings:hover {
+    background-color: blue;
+}
+
+
 
 
