--- a/style.css
+++ b/style.css
@@ -37,11 +37,6 @@ html {
     color: black;
 }
 
-#content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 #calc {
     justify-content: center;
@@ -204,6 +199,16 @@ html {
     background-color: blue;
 }
 
+/*end of shooter styling*/
+#home {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
 
-
+#home-welcome {
+    color: white;
+    font-family: 'Quicksand', sans-serif;
+}
 
